--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,6 @@
 header {
-  height: 130vh;
-  padding-top: 7rem;
+  height: 100vh;
+  padding-top: 3rem;
   overflow: hidden;
 }
 .header_container {
@@ -38,8 +38,8 @@ header {
 /* ===========Me============ */
 .me {
   background: linear-gradient(var(--color-primary), transparent);
-  width: 22rem;
-  height: 30rem;
+  width: 20rem;
+  height: auto;
   position: absolute;
   margin-top: 4rem;
   border-radius: 12rem 12rem 0 0;
@@ -56,4 +56,22 @@ header {
   transform: rotate(90deg);
   font-weight: 300;
   font-size: 0.9rem;
+}
+
+/*===============Media Queries (Medium Devices=============*/
+@media screen and (max-width:1024px) {
+  header{
+    height: 68vh;
+  }
+  
+}
+/*==============Media Queries (small Devices)==============*/
+@media screen and (max-width:600px) {
+  header{
+    height: 100vh;
+  }
+  .header_social,.scroll_down{
+    display: none;
+  }
+  
 }
