--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,14 @@
 }
 :root {
   --color-bg: #1f1f38;
-  --color-bg-variant: #2c2c2c;
+  --color-bg-variant: rgb(37, 49, 109,0.6);
   --color-primary: #4db5ff;
   --color-primary-variant: rgba(77, 181, 255, 0.4);
   --color-white: #fff;
   --color-light: rgba(255, 255, 255, 0.6);
   --container-width-lg: 75%;
   --container-width-md: 86%;
-  --container-width-ms: 90%;
+  --container-width-sm: 90%;
   --transition: all 400ms ease;
 }
 html {
@@ -50,6 +50,7 @@ h1 {
 }
 section {
   margin-top: 8rem;
+  
 }
 section > h2,
 section > h5 {
